--- a/WebSocket_RabbitMQ/src/main/resources/static/sendMsg.html
+++ b/WebSocket_RabbitMQ/src/main/resources/static/sendMsg.html
@@ -45,7 +45,7 @@
                         str:str
                     }
                 }).then(function (value) {
-
+                    alert(value.data)
                 }).catch(function (error) {
                     console.log(error)
                 })
